--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ website/home/__pycache__
 website/predictions/migrations
 website/predictions/__init__.py
 website/predictions/__pycache__
+website/__pycache__
